Updated README file

--- a/assets/index.html
+++ b/assets/index.html
@@ -50,7 +50,9 @@
         <h2>JavaScript</h2>
         <li>  <ul>
           <li>It can be used to add text to the console.</li>
-          <li>For loops can be used to do different things depending on a variable.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>For loops can be used to do different things depending on the variable.</li>
+          <li>The control flow is the order in which a computer executes the code in the script.</li>
         </ul> </li>
         </section>
 
