--- a/index.html
+++ b/index.html
@@ -4,17 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
-    <title>Prework Study Guide</title>
-  </head>
-  <body>
-    <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    </header>
-    <main>
-      <!-- Student code goes here -->
-=======
     <link rel="stylesheet" href="style.css">
     <title>Prework Study Guide</title>
   </head>
@@ -22,6 +11,7 @@
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -59,15 +49,18 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <li>  <ul>
-          <li>The head element contains information about the webpage.</li>
+          <li>It can be used to add text to the console.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>For loops can be used to do different things depending on the variable.</li>
+          <li>The control flow is the order in which a computer executes the code in the script.</li>
         </ul> </li>
         </section>
 
->>>>>>> 8113f135705b92d92aa39e2a67acdec551a8d881
     </main>
 
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
